--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".Home"></activity>
         <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Adventure"></activity>
     </application>
 
 </manifest>
