--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".Home"></activity>
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Adventure"></activity>
+        <activity android:name=".Status"></activity>
     </application>
 
 </manifest>
