add battle layout and battle animation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".Adventure"></activity>
         <activity android:name=".Status"></activity>
+        <activity android:name=".Battle"></activity>
     </application>
 
 </manifest>
