add Record & add alertdialog when exiting adventure add alertdialog when gameover

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <activity android:name=".Ability"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".Record"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
